fix tiny layout shifts when DB tab becomes active refs: #789

--- a/pgmanage/app/static/pgmanage_frontend/src/assets/scss/themes/light.scss
+++ b/pgmanage/app/static/pgmanage_frontend/src/assets/scss/themes/light.scss
@@ -167,10 +167,13 @@ SOFTWARE.
         border-color: #CAD0D8;
         border-bottom-color: #F8FAFC;
         border-top: 2px solid #1560AD;
-        font-weight: 500;
 
         .omnidb__tab-menu__link-close {
           color: #1560AD;
+        }
+        .omnidb__tab-menu__link-name {
+          // use text-shadow instead of font-weight to make active link "bolder" without affecting dimensions
+          text-shadow: 0px 0px 0px #16171E;
         }
       }
 
